@@ -14,7 +14,6 @@ echo "-Didea.config.path=$JPS_WORKSPACE/config" >> .test/args.txt
 echo '-Didea.test.cyclic.buffer.size=1048576' >> .test/args.txt
 echo "-Dbazel.test_suite=$TEST_SUITE" >> .test/args.txt
 echo "-Didea.root=$PWD" >> .test/args.txt
-echo "-Djava.security.manager=allow" >> .test/args.txt
 echo "-Dmaven.repo.for.testing=file://$JPS_WORKSPACE/maven" >> .test/args.txt
 echo "--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED" >> .test/args.txt
 echo "--add-opens=java.base/java.io=ALL-UNNAMED" >> .test/args.txt
